@@ -37,10 +37,10 @@ import mobac.gui.actions.GpxClear;
 import mobac.gui.actions.GpxLoad;
 import mobac.gui.actions.GpxNew;
 import mobac.gui.actions.GpxSave;
-import mobac.gui.actions.GpxTreeListener;
 import mobac.gui.components.JCollapsiblePanel;
 import mobac.gui.gpxtree.GpxEntry;
 import mobac.gui.gpxtree.GpxRootEntry;
+import mobac.gui.gpxtree.GpxTreeListener;
 import mobac.gui.gpxtree.RteEntry;
 import mobac.gui.gpxtree.TrkEntry;
 import mobac.gui.gpxtree.TrksegEntry;
